# ResizeImage

./: .gitignore  pyproject.toml
src/ResizeImage/: imageresize.py  linkartists.py  main.py  parser.py
