[build-system]
    build-backend = "poetry.core.masonry.api"
    requires      = ["poetry-core>=1.0.0"]
[tool.poetry]
    authors = ["Tim Holzapfel"]
    classifiers = [
        "Environment :: Web Environment :: Mozilla",
        "Development Status :: 5 - Production/Stable",
    ]
    description = "Resize song coverart."
    license = "Proprietary"
    name = "ResizeImage"
    packages = [{ include = "ResizeImage", from = "src" }]
    version = "1.0.0"
[tool.poetry.dependencies]
    Pillow                = "*"
    black                 = "*"
    joblib                = "*"
    mypy                  = "*"
    numpy                 = "*"
    opencv-contrib-python = "*"
    pandas                = "*"
    pathvalidate          = "*"
    prettytable           = "*"
    pylint                = "*"
    python                = ">=3.10,<3.11"
    regex                 = "*"
    spyder-kernels        = "^2.2.0"
    termcolor             = "*"
    types-termcolor       = "*"
    wheel                 = "*"
[tool.poetry.scripts]
    LinkArtists = "ResizeImage.parser:parse_sub"
    ResizeImage = "ResizeImage.parser:parse_main"
[tool.black]
    line-length = 78
[tool.pycln]
    all = true
[tool.pyright]
    reportUnnecessaryIsInstance = false
